--- a/form.html
+++ b/form.html
@@ -35,7 +35,6 @@
       display: block;
       margin: auto;
       
-      
 }
 
 @keyframes textclip {
@@ -86,7 +85,7 @@
     <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h3 class="animate-charcter"> Virendra</h3>
+            <h3 class="anima    te-charcter"> Virendra</h3>
           </div>
         </div>
       </div>
@@ -105,7 +104,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Contact us&nbsp;</a></li>
                     <!-- <div class="Search">
-                    <input type="text" name="search" placeholder="Search..">
+                    <input type="text" name="search" placehol-der="Search..">
                 </div> -->
                 </ul>
             </nav>
